--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,15 @@ install:
 - pip install --upgrade pip
 - pip install -r requirements.txt
 script:
+- mkdir /website/themes
+- cd /website/themes
+- git init
+- git remote add origin -f https://github.com/getpelican/pelican-themes.git
+- git config core.sparseCheckout true
+- echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout
+- git pull origin master 
 - make publish
+
 deploy:
   provider: pages
   skip_cleanup: true
