--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 
 deploy:
   provider: pages
-  skip_cleanup: true
+  cleanup: false
   github_token: $GITHUB_TOKEN
   local_dir: output
   target_branch: master
