--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,14 @@ install:
 - pip install --upgrade pip
 - pip install -r requirements.txt
 script:
-- mkdir themes && cd themes
-- git config core.sparseCheckout true
-- echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout
-- git pull origin master 
-- make publish
+- mkdir themes \
+&& cd themes \
+&& git init \
+&& git remote add origin -f \
+	https://github.com/getpelican/pelican-themes.git \
+&& git config core.sparseCheckout true \
+&& echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout \
+&& git pull origin master 
 
 deploy:
   provider: pages
