--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,7 @@ install:
 - pip install --upgrade pip
 - pip install -r requirements.txt
 script:
-- mkdir themes \
-&& cd themes \
-&& git init \
-&& git remote add origin -f https://github.com/getpelican/pelican-themes.git \
-&& git config core.sparseCheckout true \
-&& echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout \
-&& git pull origin master 
+- mkdir themes && cd themes && git init && git remote add origin -f https://github.com/getpelican/pelican-themes.git && git config core.sparseCheckout true && echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout && git pull origin master 
 
 deploy:
   provider: pages
