--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - pip install -r requirements.txt
 script:
 - mkdir themes && cd themes && git init && git remote add origin -f https://github.com/getpelican/pelican-themes.git && git config core.sparseCheckout true && echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout && git pull origin master 
-
+- make publish
 deploy:
   provider: pages
   cleanup: false
