--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - pip install -r requirements.txt
 script:
 - mkdir themes && cd themes && git init && git remote add origin -f https://github.com/getpelican/pelican-themes.git && git config core.sparseCheckout true && echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout && git pull origin master && cd .. 
+- mkdir plugins && cd /website/plugins && git init && git remote add origin -f https://github.com/getpelican/pelican-plugins && git config core.sparseCheckout true && echo "/i18n_subsites/" >> .git/info/sparse-checkout && git pull origin master && cd ..
 - make publish
 deploy:
   provider: pages
