--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ install:
 script:
 - mkdir themes && cd themes && git init && git remote add origin -f https://github.com/getpelican/pelican-themes.git && git config core.sparseCheckout true && echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout && git pull origin master && cd .. 
 - mkdir plugins && cd plugins && git init && git remote add origin -f https://github.com/getpelican/pelican-plugins && git config core.sparseCheckout true && echo "/i18n_subsites/" >> .git/info/sparse-checkout && git pull origin master && cd ..
+- git init
 - make publish
 deploy:
   provider: pages
   cleanup: false
-  github_token: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   local_dir: output
   target_branch: gh-pages
   on:
