--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ install:
 script:
 - mkdir themes && cd themes && git init && git remote add origin -f https://github.com/getpelican/pelican-themes.git && git config core.sparseCheckout true && echo "/pelican-bootstrap3/" >> .git/info/sparse-checkout && git pull origin master && cd .. 
 - mkdir plugins && cd plugins && git init && git remote add origin -f https://github.com/getpelican/pelican-plugins && git config core.sparseCheckout true && echo "/i18n_subsites/" >> .git/info/sparse-checkout && git pull origin master && cd ..
-- git clone --depth=50 --branch=master https://github.com/eliyarson/blog.git eliyarson/blog
 - make publish
 deploy:
   provider: pages
@@ -17,4 +16,5 @@ deploy:
   local_dir: output
   target_branch: gh-pages
   on:
+    repo: eliyarson/blog
     branch: master
